// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Session list header car with ПДН 1`] = `
<div
  className="component"
>
  <div
    className="dates"
  />
  <Button
    isLoading={false}
    onClick={[Function]}
    ytLog={
      Object {
        "button_name": "personal_data_download",
      }
    }
  >
    ПДН в XLSX
  </Button>
</div>
`;

exports[`Session list header car without ПДН 1`] = `
<div
  className="component"
>
  <div
    className="dates"
  />
</div>
`;

exports[`Session list header car without ПДН with session 1`] = `
<div
  className="component"
>
  <div
    className="dates"
  />
  <Button
    colorType="positive"
    onClick={[Function]}
    ytLog={
      Object {
        "button_name": "car_sessions_download",
      }
    }
  >
    СЕССИИ в XLSX
  </Button>
</div>
`;

exports[`Session list header user with ПДН 1`] = `
<div
  className="component"
>
  <div
    className="dates"
  />
  <Button
    isLoading={false}
    onClick={[Function]}
    ytLog={
      Object {
        "button_name": "personal_data_download",
      }
    }
  >
    ПДН в XLSX
  </Button>
</div>
`;

exports[`Session list header user without ПДН 1`] = `
<div
  className="component"
>
  <div
    className="dates"
  />
</div>
`;
